# Continuum

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  LLMManager.py  Makefile  README.md  continuum.yaml  continuum_architecture_interview_guide.html  continuum_architecture_interview_guide_README.md  deleteDontPush.py  docker-compose.yml  main.py  maintest.py  nohup.out  pyproject.toml  pytest.ini  requests.py  requirements.txt  settings.py
.claude/: launch.json
.github/workflows/: benchmarks.yml  ci.yml
KT/: README.md
agent/: AgentMTM.py  AgentSTM.py  agent.py
bench/: __init__.py  bi_temporal.py  ingest_throughput.py  precision_under_noise.py  retrieval_quality.py  supersession_correctness.py  synth.py
bench/results/: bi_temporal_20260523T144053.json  bi_temporal_latest.json  ingest_20260523T142108.json  ingest_20260523T142135.json  ingest_20260523T142150.json  ingest_20260523T142217.json  ingest_20260523T142302.json  ingest_latest.json  retrieval_20260523T142710.json  retrieval_20260523T142807.json  retrieval_20260523T142910.json  retrieval_latest.json  supersession_20260523T143530.json  supersession_latest.json
config/: db.yml
continuum/: __init__.py  chat.py  doctor.py  memory.py
continuum/core/: __init__.py  background.py  config.py  protocols.py  session.py  types.py
continuum/db/: __init__.py  clear.py  migrate.py  pgvector_upgrade.py
continuum/embeddings/: __init__.py  service.py
continuum/extraction/: __init__.py  candidate_extractor.py  entity_extractor.py  fact_extractor.py  llm_extractor.py  retraction.py  small_llm.py
continuum/mcp/: __init__.py  recall_hook.py  server.py
continuum/optimizer/: __init__.py  base.py  chain.py  protocol.py
continuum/policies/: __init__.py  base.py  code_policy.py  conflict_policy.py  decision_policy.py  default_policies.py  engine.py  meeting_policy.py  models.py  procedural_policy.py  registry.py  sensitivity_policy.py  storage_router.py  task_urgency_policy.py  trace.py  user_preference_policy.py
continuum/promotion/: __init__.py  attribute_extract.py  capture.py  clause_split.py  idle_flush.py  local_extractor.py  mem0_promoter.py  openrouter.py  promoter.py  synthesis.py  triggers.py
continuum/reasoning/: __init__.py  iterative_reasoner.py
continuum/retrieval/: __init__.py  bm25.py  embedding_query.py  reranker.py  retriever.py  rrf.py
continuum/scoring/: __init__.py  scorer.py
continuum_mcp/: __init__.py  web_search_server.py
docs/: DISTRIBUTION_PLAN.md  HARDENING_PLAN.md  MCP_PRODUCTION_PLAN.md  README.md  RELEASE_PLAN.md  architecture.md  config.md  continuum_eval_fix_plan.md  launch.md  limitations.md  mcp.md  operations.md  positioning.md  productionization_prompts.md  quickstart.md  report.md
documentation/: screencast.md  tknCounter.md
evals/: __init__.py
evals/locomo/: __init__.py  continuum_adapter.py  loader.py  mem0_adapter.py  run.py
evals/longmemeval/: __init__.py  adapter.py  answer_post.py  baseline.py  bootstrap_ollama.py  build_synthesis_cache.py  candidates.py  claim_verifier.py  claims.py  content_wiki.py  continuum_ltm_store.py  decompose.py  decompose_guard.py  decomposed_answer.py  evidence_packet.py  evidence_spans.py  extractive_fallback.py  hybrid_scorer.py  iterative_reasoner_wiring.py  judge.py  query_intent.py  question_type.py  reasoning_heads.py  rescore_with_judge.py  run.py  scaffold_filter.py  session_narrowing.py  setup.py  structured_claims.py  structured_finalizer.py  task_router.py  telemetry.py  trace.py  wiki.py
examples/: bare_agent.py  langgraph_node.py
examples/chat_agent/: README.md  agent.py  demo.sh  demo_script.txt
findings/: longmemeval_2026-05.md  reasoning_loop_2026-06.md  roadmap_v1.1.md  roadmap_v3.md  ws4_failures.json
findings/charts/: ablate.py  extract_tables.py  iterative_smoke_report.py  render_charts.py  v1_summary.py
helper/: databaseRetrival.py  retrieval.py  tknCounter.py  web_search.py
memory/: __init__.py
memory/mtm/: Readme.md  contextAugmenter.py  importance.py  mtmCallbacks.py
memory/stm/: ConversationSTM.py  SharedSTM.py  ThreadSafeSTM.py  __init__.py
migrations/: 001_ltm_schema.sql  002_pgvector_upgrade.sql  003_lexical_search.sql  004_policy_engine.sql  005_namespace_scoping.sql  006_hnsw_recall.sql  007_unique_live_text.sql
results/: baseline_2026-05-20.json  baseline_failures.csv  gpt4omini_decompose2  iter3_analysis.md  optimizer_iter3_judged_sample.json  optimizer_iteration_1.json  optimizer_iteration_3_judged.json  optimizer_iteration_3_retrieval_tuning.json  optimizer_iteration_4_final.json
results/gpt4omini_decompose/: baseline_2026-05-22.json  baseline_failures.csv
results/gpt4omini_topk/: baseline_failures.csv  optimizer_iteration_1.json
results/gpt4omini_wiki_full24may/: baseline_2026-05-24.json  baseline_failures.csv
results/gpt4omini_wiki_targeted_v2/: baseline_2026-05-23.json  baseline_2026-05-23.judged.json  baseline_failures.csv
results/nvidia_70b_adaptive/: baseline_failures.csv  optimizer_iteration_1.json
results/nvidia_longctx/: baseline_failures.csv
results/optimizer_iter2_scorer/: baseline_failures.csv  optimizer_iteration_2.json
results/smoke/: baseline_2026-05-20.json  baseline_2026-05-21.json  (+2 more)
samples/: balanced_120_ids.json  diagnostic_50_ids.json  failed_50_ids.json  precision_5_ids.json  precision_claim_first_ids.json  preference_30_ids.json  temporal_all_ids.json  ws4_counting_failures_ids.json  ws4_counting_micro_ids.json  ws4_counting_smoke_ids.json  ws4_failures_ids.json  ws4_nonfailures_ids.json
scripts/: backfill_embeddings.py  build_diagnostic_sample.py  check_bench_regressions.py  embedder_bakeoff.py  index_crossover.py  mcp_bench.py  mcp_eval.py  mcp_smoke.py  recall_at_scale.py  rerank_ab.py  scale_test.py  soak_test.py  verify_clean_install.py
test/: test_agent_mtm.py  test_agent_stm.py  test_counter.py  test_local_agent.py  test_mtm_repository.py  test_mtm_retriever.py  test_mtm_services.py  test_stm.py
tests/: conftest.py
vectorDb/: docker-compose.yml
website/: index.html  manifest.md  package-lock.json  package.json
(+228 files in other folders)
